deploy/deploy-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-inspect
  namespace: default
  labels:
    app: http-inspect
spec:
  clusterIP: None
  selector:
    app: http-inspect
  ports:
  - port: 80
    targetPort: 8090
    protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: http-inspect
  namespace: default
spec:
  replicas: 3
  serviceName: http-inspect
  selector:
    matchLabels:
      app: http-inspect
  template:
    metadata:
      labels:
        app: http-inspect
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: http-inspect
        image: vpburchenya/http-inspect:v1.4
        imagePullPolicy: Always
        volumeMounts:
        - name: tmp
          mountPath: /usr/local/app/tmp
        ports:
        - containerPort: 8090
          protocol: TCP
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpression:
                    - key: app
                      operator: In
                      values:
                        - http-inspect
  volumeClaimTemplates:
  - metadata:
      name: tmp
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: default
      resources:
        requests:
          storage: 1Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-inspect
  namespace: default
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-prod
  #   cert-manager.io/issuer-kind: ClusterIssuer
spec:
  tls:
  - hosts:
    - http-inspect.oz.net.ru
    secretName: http-inspect.oz.net.ru
  rules:
  - host: http-inspect.oz.net.ru
    http:
      paths:
      - backend:
          serviceName: http-inspect
          servicePort: 80
        pathType: ImplementationSpecific
