deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-inspect
  namespace: default
  labels:
    app: http-inspect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-inspect
  template:
    metadata:
      labels:
        app: http-inspect
    spec:
      volumes:
      - name: http-inspect-logs
        persistentVolumeClaim:
          claimName: http-inspect-logs-pvc
      - name: http-inspect-cfg
        configMap:
          name: http-inspect-cfg
      containers:
      - name: http-inspect
        image: vpburchenya/http-inspect:v1.1
        imagePullPolicy: Always
        volumeMounts:
        - name: http-inspect-cfg
          mountPath: /usr/local/app/conf
        ports:
        - containerPort: 8090
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: http-inspect
  namespace: default
  labels:
    app: http-inspect
spec:
  type: ClusterIP
  selector:
    app: http-inspect
  ports:
  - port: 80
    targetPort: 8090
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-inspect
  namespace: default
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  backend:
    serviceName: http-inspect
    servicePort: 80
  tls:
  - hosts:
    - http-inspect.oz.net.ru
    secretName: tls-http-inspect-ingress
  rules:
  - host: http-inspect.oz.net.ru
    http:
      paths:
      - backend:
          serviceName: http-inspect
          servicePort: 80
        pathType: ImplementationSpecific
