deploy/nexus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    section: tools
    app: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-headless
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  clusterIP: None
  selector:
    app: nexus
    section: tools
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  selector:
    matchLabels:
      app: nexus
      section: tools
  serviceName: nexus-headless
  template:
    metadata:
      labels:
        app: nexus
        section: tools
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3:3.27.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          protocol: TCP
        - containerPort: 8083
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 6
        resources:
          requests:
            memory: 2Gi
            cpu: "1"
          limits:
            memory: 2Gi
            cpu: "2"
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data
  volumeClaimTemplates:
  - metadata:
      name: nexus-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: default
      resources:
        requests:
          storage: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-ingress
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  selector:
    app: nexus
    section: tools
    statefulset.kubernetes.io/pod-name: nexus-0
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: hub
    port: 8083
    targetPort: 8083
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  rules:
  - host: nexus.oz.net.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-ingress
          servicePort: 8081
      - path: /hub
        backend:
          serviceName: nexus-ingress
          servicePort: 8083
  - host: hub.oz.net.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-ingress
          servicePort: 8083
  tls:
  - hosts:
    - nexus.oz.net.ru
    - hub.oz.net.ru
    secretName: nexus.oz.net.ru
